--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+*build*
+.vscode
+.DS_Store
+*.sh
+xbuild
+
 # Prerequisites
 *.d
 
@@ -6,6 +12,7 @@
 *.lo
 *.o
 *.obj
+
 
 # Precompiled Headers
 *.gch
@@ -30,3 +37,4 @@
 *.exe
 *.out
 *.app
+dependencies/cppcoro
